chore: save table from prettier

--- a/docs/10_domains/40_synthetic_chemistry.mdx
+++ b/docs/10_domains/40_synthetic_chemistry.mdx
@@ -42,15 +42,17 @@ In order to reach as many researchers as possible, choosing the right repository
 
 Above you can see a modified version of our decision tree from our guide how to choose the right repository. Here is a table giving an overview of what data fits into what repository:
 
-| Data type                                                                                                 | Data format                                                                                                                                                                                                                                                                                                                                                | Suggested Repository                                                                     | Criteria for selection                                                                                                                 |
-| :-------------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------- |
-| Nuclear Magnetic Resonance                                                                                | Bruker XWIN-NMR format (zip), [JCAMP-DX](/docs/JCAMP-DX/)                                                                                                                                                                                                                                                                                                  | [**Chemotion**](https://www.chemotion-repository.net/welcome)                            | Passing basic checks, curation                                                                                                         |
-| Nuclear Magnetic Resonance                                                                                | Bruker XWIN-NMR format, JOEL format NMReData, nmrML, ISA JSON                                                                                                                                                                                                                                                                                              | [**nmrXiv**](https://docs.nmrxiv.org/)                                                   | Validations / Minimum information reporting standards                                                                                  |
-| Molecules and their properties, identification, reactions and experimental investigations                 | mass spectrometry: JCAMP-DX, [mzMl](/docs/mzML/), mzXML (open, visualisable and processable), RAW for selected mass data types (processed and converted in JCAMP-DX), IR and Raman: JCAMP-DX, XRD: JCAMP-DX, UV/VIS: JCAMP-DX, Cyclic voltammetry: JCAMP-DX. \*Chemotion repo offers the option to convert data from different file formats into JCAMP-DX. | [**Chemotion**](https://www.chemotion-repository.net/welcome)                            | Passing basic checks, curation                                                                                                         |
-| Inorganic crystal structures                                                                              | Crystallographic Information File (CIF)                                                                                                                                                                                                                                                                                                                    | [**ICSD**](https://icsd.fiz-karlsruhe.de/)                                               | Crystal structure data available                                                                                                       |
-| Organic and metal-organic crystal structures                                                              | Crystallographic Information File (CIF) but other supporting file formats accepted                                                                                                                                                                                                                                                                         | [**CSD**](https://www.ccdc.cam.ac.uk/structures/)                                        | Cell parameters (single crystal), full coordinates (powder), in CIF format                                                             |
-| Organic, inorganic and metal-organic crystal structure data                                               | primarily Crystallographic Information File (CIF) but other supporting file formats accepted                                                                                                                                                                                                                                                               | [**joint CCDC/FIZ Access Structures ServiceD**](https://www.ccdc.cam.ac.uk/structures//) | At least one CIF file must be included in the submission and structure factor data for all structures should be provided (if possible) |
-| Generic data from all disciplines of chemistry, all data that do not fit in the disciplinary repositories | format-independent                                                                                                                                                                                                                                                                                                                                         | [**RADAR4Chem**](https://www.radar-service.eu/de)                                        | Validation against metadata schema                                                                                                     |
+{/* prettier-ignore-start */}
+| Data type | Data format | Suggested Repository | Criteria for selection |
+| :---- | :---- | :---- | :---- |
+| Nuclear Magnetic Resonance | Bruker XWIN-NMR format (zip), [JCAMP-DX](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/JCAMP-DX/) | [**Chemotion**](https://www.chemotion-repository.net/welcome) | Passing basic checks, curation |
+| Nuclear Magnetic Resonance | Bruker XWIN-NMR format, JOEL format NMReData, nmrML, ISA JSON | [**nmrXiv**](https://docs.nmrxiv.org/) | Validations / Minimum information reporting standards |
+| Molecules and their properties, identification, reactions and experimental investigations | mass spectrometry: JCAMP-DX, [mzMl](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/mzML/), mzXML (open, visualisable and processable), RAW for selected mass data types (processed and converted in JCAMP-DX), IR and Raman: JCAMP-DX, XRD: JCAMP-DX, UV/VIS: JCAMP-DX, Cyclic voltammetry: JCAMP-DX. \*Chemotion repo offers the option to convert data from different file formats into JCAMP-DX. | [**Chemotion**](https://www.chemotion-repository.net/welcome) | Passing basic checks, curation |
+| Inorganic crystal structures | Crystallographic Information File (CIF) | [**ICSD**](https://icsd.fiz-karlsruhe.de/) | Crystal structure data available |
+| Organic and metal-organic crystal structures | Crystallographic Information File (CIF) but other supporting file formats accepted | [**CSD**](https://www.ccdc.cam.ac.uk/structures/) | Cell parameters (single crystal), full coordinates (powder), in CIF format |
+| Organic, inorganic and metal-organic crystal structure data | primarily Crystallographic Information File (CIF) but other supporting file formats accepted | [**joint CCDC/FIZ Access Structures ServiceD**](https://www.ccdc.cam.ac.uk/structures//) | At least one CIF file must be included in the submission and structure factor data for all structures should be provided (if possible) |
+| Generic data from all disciplines of chemistry, all data that do not fit in the disciplinary repositories | format-independent | [**RADAR4Chem**](https://www.radar-service.eu/de) | Validation against metadata schema |
+{/* prettier-ignore-end */}
 
 Your own institution may also have additional guidelines & resources for publishing data, therefore it is always worth consulting the research data management experts of your local institution.
 
