fix: mdx comment syntax

--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -41,7 +41,7 @@ As many physical chemists may establish their own workflows or develop their own
 
 ## Publishing Data
 
-[Publishing research data](docs/data_publication), especially that underlying a published article, is an important aspect that allows others in the research community to replicate and build upon a researchers work. [Research data repositories](docs/repositories) serve as platforms for data publication and can greatly assist in [FAIR](docs/fair) data publication. Such repositories range from subject-specific to general and institutional. For many in physical chemistry and its varied data, general repositories such as [RADAR4Chem](https://radar.products.fiz-karlsruhe.de/de/radarabout/radar4chem) presents an option for publishing data for which now (sub-)discipline-specific repository has been established. [ioChem-BD](https://www.iochem-bd.org/) serves as a computational chemistry repository and includes a conversion service for many common data types to ensure interoperability. The [Image Data Resource (IDR)](https://idr.openmicroscopy.org/) makes biological imaging data available to the community, while self-hosted Omero repositoy can assist those working with other types of imaging data. <!--Nikki: as far as I know--> For more information on choices, head [here](docs/choose_repository).
+[Publishing research data](docs/data_publication), especially that underlying a published article, is an important aspect that allows others in the research community to replicate and build upon a researchers work. [Research data repositories](docs/repositories) serve as platforms for data publication and can greatly assist in [FAIR](docs/fair) data publication. Such repositories range from subject-specific to general and institutional. For many in physical chemistry and its varied data, general repositories such as [RADAR4Chem](https://radar.products.fiz-karlsruhe.de/de/radarabout/radar4chem) presents an option for publishing data for which now (sub-)discipline-specific repository has been established. [ioChem-BD](https://www.iochem-bd.org/) serves as a computational chemistry repository and includes a conversion service for many common data types to ensure interoperability. The [Image Data Resource (IDR)](https://idr.openmicroscopy.org/) makes biological imaging data available to the community, while self-hosted Omero repositoy can assist those working with other types of imaging data. {/* <!--Nikki: as far as I know--> */} For more information on choices, head [here](docs/choose_repository).
 
 For work that includes developing in-house research software solutions: **software is data and an integral part of research and should be published as such**. While only GitHub currently offers an automatic workflow for publishing software releases to [zenodo](https://zenodo.org/), there are methods to assign the [software a DOI, therefore making it citable](https://open.win.ox.ac.uk/pages/open-science/community/Open-WIN-Community/docs/gitlab/repo-doi/).
 
