chore: harmonise headings

--- a/docs/10_domains/40_synthetic_chemistry.mdx
+++ b/docs/10_domains/40_synthetic_chemistry.mdx
@@ -22,7 +22,7 @@ The synthesis of a specific product is followed by analysing its properties. Reg
 
 Overall, [metadata](/docs/metadata/) should always be included when collecting and [storing](/docs/data_storage/) data to allow understanding of the research data in the long term.
 
-# What ELNs/Tools?
+# ELNs and Other Tools
 
 For planning research data management and creating data management plans, tools such as [RDMO](https://rdmorganiser.github.io/) and [DMP-Online](https://dmponline.dcc.ac.uk/) are suitable. Many universities have their own instances of these solutions.
 
