fix: heading depth

--- a/docs/10_domains/40_synthetic_chemistry.mdx
+++ b/docs/10_domains/40_synthetic_chemistry.mdx
@@ -10,7 +10,7 @@ import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 <LbeChip title="inorganic chemistry" />
 <LbeChip title="organic chemistry" />
 
-# Introduction
+## Introduction
 
 During the synthesis of a desired compound, all steps, such as planning, realisation and documentation of an experiment, or characterisation of the obtained product, provide research data. These data are synthetic procedures, experimental conditions, as well as manually and digital data collected with analytical devices. Processing and interpretation of the obtained research data will lead to a proof of concept for a given reaction, optimised conditions for future experiments or upscaling.
 
