--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -73,13 +73,13 @@ A disadvantage of pre-submission is that researchers cannot link the dataset to 
 
 Some repositories have an *under review* status alongside the *draft* and *published* statuses. A dataset *under review* is not editable and not yet published, i.e. it does not have a DOI registered. Therefore, the DOI cannot be validated. Nonetheless, the dataset has an internally reserved DOI and is accessible via a URL to provide access to editors and reviewers. This allows research data to be included in the review process. The URL to access the dataset should be requested by the submission system so that it can be forwarded to editors and reviewers.
 
-### Encourage authors to publish datasets *under review* prior the articles gets published
+### Encourage authors to publish datasets *under review* prior to article publication
 
 :::tip Standard
 *Journal author guidelines should require that datasets with status under review to be published prior to the publication of the associated article.*
 :::
 
-To assist in automated workflows, such as linking the datasets to the published article through their respective PIDs, **datasets *under review* should be published before the article gets published**. Once a manuscript has been accepted, the authors should be informed to publish their dataset *under review*. This ensures that the data has a registered DOI when the article gets published. Consequently, journals can run quality control checks on the provided DOI such as validation. This process must be explicitly communicated with authors through the author guidelines, yet, can also be included within other communication upon acceptance. Contemporaneous, the DOI for the article should be provided so that authors can include this information in their dataset's metadata prior to the publication of the dataset. Finally, the article is published, and its DOI is registered.
+To assist in automated workflows, such as linking the datasets to the published article through their respective PIDs, **datasets *under review* should be published before the article is published**. Once a manuscript has been accepted, the authors should be informed to publish their dataset *under review*. This ensures that the data has a registered DOI when the article gets published. Consequently, journals can run quality control checks on the provided DOI such as validation. Publishers must explicitly communicate this process with authors through the author guidelines. In addition, other communication upon acceptance may also include this informaton. Contemporaneous, the DOI for the article should be provided so that authors can include this information in their dataset's metadata prior to the publication of the dataset. Finally, the article is published, and its DOI is registered.
 
 ### Scholix.org
 
