fix comment on linking

--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -33,7 +33,7 @@ To assist authors in selecting **well-established and community-specific [reposi
 *Journals should use the information available in data availability statements to enhance Crossref DOI metadata by linking articles to datasets.*
 :::
 
-With the DOI and repository name in hand, journals should enrich Crossref DOI metadata of articles published following the [FAIR](/docs/fair/) principles (e.g [F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below), [I3](/docs/fair/#i3-metadata-include-qualified-references-to-other-metadata)). This establishes a structured **link** between the DOI of the article and the  DOI of the dataset and ensures humans and machines alike can interpret the relationship between the published objects. Without defining this relation, only humans can effectively interpret this connection through the data availability statement, effectively resulting in a missing link between the the reported results in the article and the underlying research data. For Crossref metadata, a `related_item` should be added to mention the name of the repository (equal to `publisher` in the corresponding dataset DataCite DOI metadata). 
+With the DOI and repository name in hand, journals should enrich Crossref DOI metadata of articles published following the [FAIR](/docs/fair/) principles (e.g [F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below), [I3](/docs/fair/#i3-metadata-include-qualified-references-to-other-metadata)). This establishes a structured **link** between the DOI of the article and the  DOI of the dataset and ensures humans and machines alike can interpret the relationship between the published objects. Without defining a relation in the Crossref metadata, only humans can effectively interpret this connection through the data availability statement, effectively resulting in a missing link between the the reported results in the article and the underlying research data. For Crossref metadata, a `related_item` should be added to mention the name of the repository (equal to `publisher` in the corresponding dataset DataCite DOI metadata). 
 
 <!--image clarifiyng why this is important-->
 
