fix: generic sentence, improve text

--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -9,7 +9,7 @@ slug: "/publishing_standards_infrastructure"
 *Research data repositories should include the metadata in datasets downloaded by researchers and exchanged with other resources.*
 :::
 
-While researchers upload their data, metadata is attached. For generic, multidisciplinary repositories, additional metadata is provided by researchers via a metadata editor. For field-specific repositories, the metadata is extracted from the analytical data files and provided by researchers along their lab workflows, as this is the case for Chemotion ELN. Once data is retrieved from a repository, this metadata should not be lost but should be included in the downloaded package. The minimum to include is the descriptive DataCite metadata. 
+Generic and technical metadata is attached to the dataset during the upload process. For generic, multidisciplinary repositories, researchers provide additional metadata via a metadata editor. For field-specific repositories, the metadata is extracted from the analytical data files and provided by researchers along their lab workflows, as this is the case for Chemotion ELN. Once data is retrieved from a repository, this metadata should not be lost but should be included in the downloaded package. The minimum to include is the descriptive DataCite metadata. 
 
 [BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), a set of hierarchical file system conventions, is one solution to enable reliable file transfer and to include metadata in downloaded dataset, as this is already the case for RADAR. 
 
