--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -19,7 +19,7 @@ Generic and technical metadata is attached to the dataset during the upload proc
 *Research data repositories should include structured, domain-specific metadata in datasets downloaded by researchers and exchanged with other resources.*
 :::
 
-Beside of metadata following generic schemes such as DataCite's metadata scheme, domain-specific metadata should be part of each dataset. This metadata should also be provided in datasets downloaded by researchers for reuse or exchanged with other resources. 
+Besides metadata following generic schemes such as DataCite's metadata scheme, domain-specific metadata should be part of each dataset. This metadata should also be provided in datasets downloaded by researchers for reuse or exchanged with other resources. 
 
 One solution to this is to include Schema.org metadata making use of [RO-Crate](https://www.researchobject.org/) or by even [combining RO-Crate and BagIt](https://www.researchobject.org/ro-crate/specification/1.1/appendix/implementation-notes.html#adding-ro-crate-to-bagit). While BagIt focusses on reliable transfer, RO-Crate is about rich metadata. 
 
@@ -29,7 +29,7 @@ One solution to this is to include Schema.org metadata making use of [RO-Crate](
 *Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to a single article that is to be published.*
 :::
 
-Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should allow authors to generate a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement.
+Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should allow authors to generate a [**Collection DOI**](https://chemotion.net/docs/repo/doi) that wraps relevant data that should be referenced in the data availability statement.
 
 ### Embargo period and metadata accessibility
 
