--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -19,7 +19,7 @@ Generic and technical metadata is attached to the dataset during the upload proc
 *Research data repositories should include structured, domain-specific metadata in datasets downloaded by researchers and exchanged with other resources.*
 :::
 
-Besides metadata following generic schemes such as DataCite's metadata scheme, domain-specific metadata should be part of each dataset. This metadata should also be provided in datasets downloaded by researchers for reuse or exchanged with other resources. 
+Besides metadata following generic schemes such as [DataCite's metadata scheme](https://schema.datacite.org/), domain-specific metadata should be part of each dataset. This metadata should also be provided in datasets downloaded by researchers for reuse or exchanged with other resources. 
 
 One solution to this is to include Schema.org metadata making use of [RO-Crate](https://www.researchobject.org/) or by even [combining RO-Crate and BagIt](https://www.researchobject.org/ro-crate/specification/1.1/appendix/implementation-notes.html#adding-ro-crate-to-bagit). While BagIt focusses on reliable transfer, RO-Crate is about rich metadata. 
 
