MDX style comments if absolutely necessary

--- a/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
+++ b/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
@@ -5,7 +5,7 @@ slug: "/publishing_standards_authors"
 
 ### Use ORCID iD to identifiy authors and ROR to identifiy institutions
 
-<!--image "order of operations" needed (flowchart). May need to highlight various types of workflows, e.g., at which stage of the manuscript publication process data should be published.-->
+{/* image "order of operations" needed (flowchart). May need to highlight various types of workflows, e.g., at which stage of the manuscript publication process data should be published. */}
 
 :::tip Standard
 _Authors should provide their ORCID iD to identify the authors/creators and contributors, and their ROR identifier to identify the institution to which they are affiliated._
