--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -61,13 +61,15 @@ The DFG has been offering a [checklist](https://www.dfg.de/en/research_funding/p
 
 ## DMP Tools
 
-The creation of a DMP can be supported by various tools. Some of the most common tools are:
+The creation of a DMP can be supported by various tools. 
 
+NFDI4Chem is proud to present an RDMO template specifically tailored to the needs of chemists. At [https://rdmo.nfdi4chem.de/](https://rdmo.nfdi4chem.de/) you will find a questionnaire that will lead you to a detailed DMP for your project.
+The [Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) is run at 45 research institutions in Germany and abroad (as of January 2022). It was developed in a DFG-funded project (2015–2020) and is now further maintained by the RDMO working group as an open source software. It offers several "question catalogs" for specific funding programs, disciplines, or research consortia. They enable researchers to organise their data management with the help of precisely formulated questions, help texts, multiple-choice answers. User-created catalogs may be reused and are available for download in a [central repository](https://github.com/rdmorganiser/rdmo-catalog).
+
+Further tools are:
 [DMPOnline](https://dmponline.dcc.ac.uk/) was developed by the UK Digital Curation Centre (DCC). It includes a template for Horizon Europe projects as well as from the main UK funders. It also provides short general explanations for every single question. DMPOnline and DMPTool are based on the software DMPRoadmap.
 
 [DMPTool](https://dmptool.org/) is run by the California Digital Library. Due to the different funding landscape in the US, the tool is only of limited use for German/European projects. One advantage is that DMPTool provides DMP examples on the website. It can be used without using the tool.
-
-[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) is run at 45 research institutions in Germany and abroad (as of January 2022). It was developed in a DFG-funded project (2015–2020) and is now further maintained by the RDMO working group as an open source software. It offers several "question catalogs" for specific funding programs, disciplines, or research consortia. They enable researchers to organise their data management with the help of precisely formulated questions, help texts, multiple-choice answers. User-created catalogs may be reused and are available for download in a [central repository](https://github.com/rdmorganiser/rdmo-catalog).
 
 To further support researchers in answering the questions, working groups have been formed, e.g. in Science Europe or the Research Data Alliance (RDA). The Science Europe Group is focusing on improving the general help texts, while the working group in the RDA focuses on [discipline-specific guidance](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg). Science Europe set up a new version of the [practical guide](https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/) in January 2021.
 
